Fix z-index problem

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -268,6 +268,7 @@ body {
     height: 100%;
     position: fixed;
     overflow: hidden;
+    z-index: -10;
     background: no-repeat center center fixed;
     img {
       width: 100%;
